# home-app

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: cleanup-images.yml  publish-helm.yml  publish.yml  update-home-infra.yml
auth-service/: .env.example  Dockerfile  README.md  pyproject.toml
auth-service/app/: config.py  database.py  main.py  models.py  rate_limit.py  schemas.py
auth-service/app/routers/: auth.py
auth-service/helm/: Chart.yaml  values.yaml
auth-service/helm/templates/: _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  exercise.py  goal.py  plan.py  weight.py
backend/app/routers/: __init__.py  ai.py  exercises.py  goals.py  plans.py  weight.py
backend/app/schemas/: exercise.py  goal.py  plan.py  weight.py
backend/app/services/: ai_service.py  fitness.py
backend/tests/: conftest.py  test_goals.py  test_plans.py
cloud-gateway/: Dockerfile  README.md  go.mod
cloud-gateway/web/: login.html
docs/: mtls-setup.md  server-security.md  user-management.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: App.tsx  api.ts  index.css  index.tsx
helm/: Chart.yaml  values.yaml
lan-agent/: .gitignore  Dockerfile  README.md  pyproject.toml
lan-agent/agent/: main.py  tunnel.py
lan-agent/config/: settings.py
lan-agent/helm/: Chart.yaml  values.yaml
lan-agent/helm/templates/: _helpers.tpl  deployment.yaml
(+21 files in other folders)
