[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication service for cloud gateway - user management, login, JWT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.0",
    "PyJWT>=2.0",
]
