[project]
name = "lan-agent"
version = "0.1.0"
description = "Reverse tunnel agent - connects to cloud gateway via mTLS WSS and forwards requests to LAN services"
requires-python = ">=3.11"
dependencies = [
    "websockets>=14.0",
    "httpx>=0.28.0",
]

[project.scripts]
lan-agent = "agent.main:main"

[tool.setuptools.packages.find]
include = ["agent", "config"]
